Base implementation for endpoint /mma​/v1​/stammdaten​/chance​/getStatus and ​/mma​/v1​/stammdaten​/chance​/getWahrscheinlichkeit
