# storage/api-docs/api-docs.json
@@ -144,6 +144,98 @@
                 }
             }
         },
+        "/mma/v1/stammdaten/chance/getStatus": {
+            "get": {
+                "tags": [
+                    "Canchen"
+                ],
+                "summary": "-----IN PROGRESS-------",
+                "operationId": "getStatus",
+                "parameters": [
+                    {
+                        "name": "oAuth2accessToken",
+                        "in": "query",
+                        "description": "",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "password"
+                        }
+                    },
+                    {
+                        "name": "erpFremdKeyList[]",
+                        "in": "query",
+                        "description": "",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            },
+                            "collectionFormat": "multi",
+                            "example": [
+                                "ErpFremdKey1"
+                            ]
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Validation Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/mma/v1/stammdaten/chance/getWahrscheinlichkeit": {
+            "get": {
+                "tags": [
+                    "Canchen"
+                ],
+                "summary": "-----IN PROGRESS-------",
+                "operationId": "getWahrscheinlichkeit",
+                "parameters": [
+                    {
+                        "name": "oAuth2accessToken",
+                        "in": "query",
+                        "description": "",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "format": "password"
+                        }
+                    },
+                    {
+                        "name": "erpFremdKeyList[]",
+                        "in": "query",
+                        "description": "",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            },
+                            "collectionFormat": "multi",
+                            "example": [
+                                "ErpFremdKey1"
+                            ]
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Validation Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/proxess/v1/": {
             "get": {
                 "tags": [
